--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "console.table": "^0.10.0",
     "express": "^4.18.2",
     "inquirer": "^8.2.4",
+    "jest": "^29.3.1",
     "mysql2": "^2.3.3"
   }
 }
